fixes: table captions, figures, table-targets, table table head right border, center align text, other misc. fixes

--- a/css/ccap-economics.less
+++ b/css/ccap-economics.less
@@ -29,8 +29,6 @@
 @font-family-serif: Times New Roman, serif, @stix-fonts;
 
 @page-width: 6in;
-// The base CCAP books use sans fonts but the anatomy books use serif fonts.
-@font-family-economics: Liberation Serif, serif, @stix-fonts;
 @page { margin: 0.5in 1in; }
 // Finished printed size of the QR code is dependent on: 1-distance between qr code and scanning device
 // 2-size of dots in the code(amount of data inputed into the code, the smaller the dots become)
@@ -241,6 +239,32 @@ blockquote {
   }
 }
 
+/*----------------------
+ * Misc Color changes
+ *----------------------
+ */
+
+//These should just be replacing @color1 with @color2
+
+.target-figure {
+  font-family: @font-family-sans-serif;
+  color: @dark-blue;
+}
+
+.target-table {
+  font-family: @font-family-sans-serif;
+  color: @dark-blue;
+  font-weight: bold;
+}
+
+.cnx-figure-horizontal .informalfigure .caption {
+  * {
+    font-family: @font-family-sans-serif;
+  }
+}
+
+
+
 
 /* -------------------------
  * Tables
@@ -253,6 +277,7 @@ blockquote {
   border-right: 0 !important;
   border-top: 2px solid @dark-blue !important; // !important used to override inline-style...
 
+  caption,
   caption span,
   caption::before,
   caption span.table-caption.caption {
@@ -262,6 +287,11 @@ blockquote {
 
   thead {
     th {
+      // autogenerated inline styles are laced with !important, so for economics
+      // design we need no right border on table head and also text centered.
+      border-right: 0 !important;
+      text-align: center !important;
+
       background-color: @light-blue;
       border-bottom: 2px solid @dark-blue !important; //!important used in ccap-precalculus.
     }
